--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
     "rules": {
         "prettier/prettier":"error",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "no-unused-vars": "warn"
+        "no-unused-vars": "warn",
+        "react/prop-types": "off",
+        "react/jsx-no-constructed-context-values": "off"
     }
 }
